--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="<%=require('../images/logo.svg').default%>" alt="mesto logo" class="logo">
+      <img src="<%=require('./images/logo.svg').default%>" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -28,7 +28,7 @@
 
 <div class="popup popup__edit">
   <div class="popup__content">
-    <img src="<%=require('../images/close.svg').default%>" alt="" class="popup__close">
+    <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
     <h3 class="popup__title">Редактировать профиль</h3>
     <form class="popup__form_info" name="info" novalidate>
       <div>
@@ -44,7 +44,7 @@
 
     <div class="popup popup__card">
       <div class="popup__content">
-        <img src="<%=require('../images/close.svg').default%>" alt="" class="popup__close">
+        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form" name="new">
           <div>
