--- a/src/index.html
+++ b/src/index.html
@@ -46,17 +46,32 @@
       <div class="popup__content">
         <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
         <h3 class="popup__title">Новое место</h3>
-        <form class="popup__form" name="new">
+        <form class="popup__form popup__form_card" name="new">
           <div>
-          <input id="name" type="text" name="name" class="popup__input popup__input_type_name" placeholder="Название" required minlength="2" maxlength="30" >
+          <input id="name" type="text" name="name" class="popup__input popup__input_type_name popup__card_name" placeholder="Название" required minlength="2" maxlength="30" >
           <span id="error" class="error"></span></div>
           <div>
-          <input id="link" type="url" name="link" class="popup__input popup__input_type_link-url" placeholder="Ссылка на картинку" required>
+          <input id="link" type="url" name="link" class="popup__input popup__input_type_link-url popup__card_link" placeholder="Ссылка на картинку" required>
           <span id="error" class="error"></span></div>
             <button type="submit" class="button popup__button">+</button>
         </form>
       </div>
     </div>
+
+     
+    <div class="popup popup__avatar">
+      <div class="popup__content">
+        <img src="./images/close.svg" alt="" class="popup__close">
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="avatar">
+          <div>
+          <input id="link" type="url" name="link" class="popup__input popup__input_type_link-url" placeholder="Ссылка на аватар" required>
+          <span id="error" class="error"></span></div>
+            <button type="submit" class="button popup__button">+</button>
+        </form>
+      </div>
+    </div>
+    
   </div>
   <script type="module" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 
