--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           <div>
           <input id="link" type="url" name="link" class="popup__input popup__input_type_link-url popup__card_link" placeholder="Ссылка на картинку" required>
           <span id="error" class="error"></span></div>
-            <button type="submit" class="button popup__button">+</button>
+            <button type="submit" class="button popup__button popup__button_card">+</button>
         </form>
       </div>
     </div>
@@ -63,11 +63,11 @@
       <div class="popup__content">
         <img src="./images/close.svg" alt="" class="popup__close">
         <h3 class="popup__title">Обновить аватар</h3>
-        <form class="popup__form" name="avatar">
+        <form class="popup__form popup__form_avatar" name="avatar">
           <div>
           <input id="link" type="url" name="link" class="popup__input popup__input_type_link-url" placeholder="Ссылка на аватар" required>
           <span id="error" class="error"></span></div>
-            <button type="submit" class="button popup__button">+</button>
+            <button type="submit" class="button popup__button popup__button_avatar">+</button>
         </form>
       </div>
     </div>
